<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_backgrond"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/previewtext"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/zonetext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zonetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="40dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/dysplayHint"
        android:textColorHint="@color/greyAccent"
        android:textSize="35dp"
        android:textAlignment="textEnd"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/bvirgul"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/decimalText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/b0"
            app:layout_constraintTop_toBottomOf="@+id/b3" />

        <Button
            android:id="@+id/b0"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/zeroText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/bmuted"
            app:layout_constraintTop_toBottomOf="@+id/b2" />

        <Button
            android:id="@+id/bmuted"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/opperation_button"
            android:text="@string/mutedText"
            android:textColor="@color/tanAccent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1" />

        <Button
            android:id="@+id/bplus"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/opperation_button"
            android:text="@string/addText"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/tanAccent"

            app:layout_constraintStart_toEndOf="@+id/b3"
            app:layout_constraintTop_toBottomOf="@+id/bmoin" />

        <Button
            android:id="@+id/begale"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/equal_button"
            android:text="@string/equalsText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/bvirgul"
            app:layout_constraintTop_toBottomOf="@+id/bplus" />

        <Button
            android:id="@+id/b3"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/threeText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/b2"
            app:layout_constraintTop_toBottomOf="@+id/b6" />

        <Button
            android:id="@+id/b2"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/twoText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/b1"
            app:layout_constraintTop_toBottomOf="@+id/b5" />

        <Button
            android:id="@+id/b1"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/oneText"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b4" />

        <Button
            android:id="@+id/bmoin"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/opperation_button"
            android:text="@string/subtractText"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/tanAccent"

            app:layout_constraintStart_toEndOf="@+id/b6"
            app:layout_constraintTop_toBottomOf="@+id/bmult" />

        <Button
            android:id="@+id/b6"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/sixText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/b5"
            app:layout_constraintTop_toBottomOf="@+id/b9" />

        <Button
            android:id="@+id/b5"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/fiveText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            app:layout_constraintStart_toEndOf="@+id/b4"
            app:layout_constraintTop_toBottomOf="@+id/b8" />

        <Button
            android:id="@+id/b4"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/fourText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b7" />

        <Button
            android:id="@+id/bmult"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/opperation_button"
            android:text="@string/mulitiplyText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/b9"
            app:layout_constraintTop_toBottomOf="@+id/bdiv" />

        <Button
            android:id="@+id/b9"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/nineText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            app:layout_constraintStart_toEndOf="@+id/b8"
            app:layout_constraintTop_toBottomOf="@+id/bmodul" />

        <Button
            android:id="@+id/b8"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/eightText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            app:layout_constraintStart_toEndOf="@+id/b7"
            app:layout_constraintTop_toBottomOf="@+id/bac" />

        <Button
            android:id="@+id/b7"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background"
            android:text="@string/sevenText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bc" />

        <Button
            android:id="@+id/bdiv"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:background="@drawable/opperation_button"
            android:text="@string/divideText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/bmodul"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bmodul"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/opperation_button"
            android:text="@string/moduloText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"

            app:layout_constraintStart_toEndOf="@+id/bac"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bc"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button"
            android:text="@string/clearText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bac"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/clear_allbutton"
            android:text="@string/clearAllText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"

            app:layout_constraintStart_toEndOf="@+id/bc"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>